[Refactor]